Kokkos-connector updates

--- a/source/tools/kokkos-connector/CMakeLists.txt
+++ b/source/tools/kokkos-connector/CMakeLists.txt
@@ -168,16 +168,25 @@ endfunction()
 #
 if(TIMEMORY_KOKKOS_BUILD_SAMPLE)
     # use launch_compiler feature to ensure kokkos uses it's original compiler
-    find_package(Kokkos REQUIRED OPTIONAL_COMPONENTS separable_compilation)
-    add_executable(kokkos-connector-sample sample/sample.cpp)
-    target_compile_definitions(kokkos-connector-sample PRIVATE -DKOKKOS_PROFILE_LIBRARY="$<TARGET_FILE:kp_timemory>")
-    target_link_libraries(kokkos-connector-sample PRIVATE Kokkos::kokkos)
-    set_target_properties(kokkos-connector-sample PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-    kokkos_compilation(TARGET kokkos-connector-sample)
-    add_kokkos_sample_test(libtimemory timemory::timemory-cxx-shared)
-    add_kokkos_sample_test(kp-timemory kp_timemory)
-    add_kokkos_sample_test(kp-timemory-filter kp_timemory_filter)
+    find_package(Kokkos REQUIRED)
+    get_filename_component(_Kokkos_CXX_COMPILER_NAME "${Kokkos_CXX_COMPILER}" NAME)
+    get_filename_component(_timemory_CXX_COMPILER_NAME "${CMAKE_CXX_COMPILER}" NAME)
+    string(REPLACE "+" "x" _Kokkos_CXX_COMPILER_NAME "${_Kokkos_CXX_COMPILER_NAME}")
+    string(REPLACE "+" "x" _timemory_CXX_COMPILER_NAME "${_timemory_CXX_COMPILER_NAME}")
+    if("${_timemory_CXX_COMPILER_NAME}" MATCHES "${_Kokkos_CXX_COMPILER_NAME}" OR TIMEMORY_KOKKOS_FORCE_BUILD_SAMPLE)
+        add_executable(kokkos-connector-sample sample/sample.cpp)
+        target_compile_definitions(kokkos-connector-sample PRIVATE -DKOKKOS_PROFILE_LIBRARY="$<TARGET_FILE:kp_timemory>")
+        target_link_libraries(kokkos-connector-sample PRIVATE Kokkos::kokkos)
+        set_target_properties(kokkos-connector-sample PROPERTIES
+            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+        kokkos_compilation(TARGET kokkos-connector-sample)
+        add_kokkos_sample_test(libtimemory timemory::timemory-cxx-shared)
+        add_kokkos_sample_test(kp-timemory kp_timemory)
+        add_kokkos_sample_test(kp-timemory-filter kp_timemory_filter)
+    else()
+        message(AUTHOR_WARNING "${Kokkos_CXX_COMPILER} is different than ${CMAKE_CXX_COMPILER}")
+        set(TIMEMORY_KOKKOS_BUILD_SAMPLE OFF)
+    endif()
 endif()
 
 ##--------------------------------------------------------------------------------------##
