Support CUDA compilation with Clang compiler (#161)
* Added support for cuda compilation with clang

* Miscellaneous updates for clang + cuda

- protect NVCC flags with gen-expr
- GPU "CALLABLE" -> TIMEMORY macros
- Use __CUDACC__ instead of __NVCC__
- _TIMEMORY_OPENMP_TARGET guards
- disable cupti_counters for CUDA 11
- define malloc_gotcha types explicitly
- threading::affinity::set
- CI testing for cuda + clang

* Removed error check

* Macro updates + kokkos tests

- _UNIX == TIMEMORY_UNIX
- _LINUX == TIMEMORY_LINUX
- _WINDOWS == TIMEMORY_WINDOWS
- _MACOS == TIMEMORY_MACOS
- Added tests when kokkos sample is built
- Updated kokkos-common memory_entry_t to use user_kokkosp_bundle

* Update add_secondary.hpp

* CI updates

* Find launch_compiler component when finding Kokkos

* Fix to TIMEMORY_PYTHON_PLOTTER pre-processor def

* Use separable compilation for kokkos instead of launch_compiler

* cmake_defines fixes for default

* Update kokkos_compilation usage

* Enable HW counters for CUDA 11

* Kokkos-connector updates

* Remove kokkos_compilation macro usage

* More kokkos-connector updates

* Testing updates

* Miscellaneous testing fixes

- TIMEMORY_LIBRARY_SOURCE
- Fix visibility for kp_timemory on linux
- Fix weak binding on macOS
- Better data_tracker_tests

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -12,16 +12,16 @@ jobs:
           - build_type: 'Debug'
             compiler: 'gcc-7'
             standard: '17'
-            tools: 'dyninst mpip ncclp mallocp'
+            tools: 'dyninst mpip ncclp mallocp kokkos'
             extra_args: '--coverage --minimal'
-            generator: ''
+            extra_cmake: ''
         # compiler: ['gcc-6', 'gcc-7', 'gcc-8', 'gcc-9', 'gcc-10', 'clang-6.0', 'clang-7', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
         build_type: ['Release']
-        compiler: ['gcc-9', 'gcc-10', 'clang-10', 'clang-11', 'clang-12']
+        compiler: ['gcc-9', 'clang-10', 'gcc-10', 'clang-11', 'clang-12']
         standard: ['17']
         tools: ['avail kokkos kokkos-config dyninst mpip ncclp mallocp compiler']
         extra_args: ['--python']
-        generator: ['-G Ninja']
+        extra_cmake: ['-G Ninja']
     runs-on: self-hosted
     steps:
       - name: Checkout Code
@@ -36,7 +36,7 @@ jobs:
           git submodule update .
           module load anaconda
           module load likwid
-          module load cuda/10.2
+          if [ -n "$(echo ${{ matrix.compiler }} | grep 'clang')" ]; then module load cuda/10.0; CUDA_CLANG=1; else module load cuda; CUDA_CLANG=0; fi
           module list
           spack env activate timemory-ci
           spack load dyninst boost
@@ -44,11 +44,13 @@ jobs:
           conda activate timemory
           echo "python: $(which python)"
           env
+          if [ -n "$(echo ${{ matrix.compiler }} | grep 'clang')" ]; then KOKKOS_SAMPLE=OFF; else KOKKOS_SAMPLE=ON; fi
           if [ -z "$(echo ${LD_LIBRARY_PATH} | grep timemory-ci)" ]; then echo "Warning: incorrect LD_LIBRARY_PATH: ${LD_LIBRARY_PATH}"; fi
           BASE_ARGS="--papi --likwid --mpi --cuda --cupti --gotcha --caliper --extra-optimizations --tools ${{ matrix.tools }} -SF --pyctest-model=Continuous -j 6"
           CTEST_ARGS="-V"
-          CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${PWD}/install-timemory ${{ matrix.generator }}"
+          CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${PWD}/install-timemory -DTIMEMORY_KOKKOS_BUILD_SAMPLE=${KOKKOS_SAMPLE} -DTIMEMORY_BUILD_CALIPER=OFF -DTIMEMORY_BUILD_GOTCHA=OFF ${{ matrix.extra_cmake }}"
           export CC=${{ matrix.compiler }}
           export CXX="$(echo '${{ matrix.compiler }}' | sed 's/gcc/g++/1' | sed 's/clang/clang++/1')"
+          if [ "${CUDA_CLANG}" -eq 1 ]; then export CUDACXX=${CXX}; fi
           python ./pyctest-runner.py --cxx-standard=${{ matrix.standard }} --pyctest-build-type=${{ matrix.build_type }} ${{ matrix.extra_args }} ${BASE_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}
           cmake --build build-timemory/Linux --target all --parallel 6
