--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -11,6 +11,13 @@ foreach(_DEF ${_CMAKE_DEFINES})
 endforeach()
 set(${PROJECT_NAME}_CMAKE_DEFINES "${${PROJECT_NAME}_CMAKE_DEFINES}\n")
 
+get_property(_DEFAULT_CMAKE_DEFINES GLOBAL PROPERTY ${PROJECT_NAME}_DEFAULT_CMAKE_DEFINES)
+set(${PROJECT_NAME}_DEFAULT_CMAKE_DEFINES)
+foreach(_DEF ${_DEFAULT_CMAKE_DEFINES})
+    set(${PROJECT_NAME}_DEFAULT_CMAKE_DEFINES "${${PROJECT_NAME}_DEFAULT_CMAKE_DEFINES}\n${_DEF}")
+endforeach()
+set(${PROJECT_NAME}_DEFAULT_CMAKE_DEFINES "${${PROJECT_NAME}_DEFAULT_CMAKE_DEFINES}\n")
+
 configure_file(${PROJECT_SOURCE_DIR}/cmake/Templates/defines.h.in
     ${CMAKE_CURRENT_BINARY_DIR}/defines.h.in @ONLY)
 
