Support optional installation
- new options: TIMEMORY_INSTALL_HEADERS, TIMEMORY_INSTALL_CONFIG, TIMEMORY_INSTALL_ALL
- all install commands are optional

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,33 @@ orbs:
   docker: circleci/docker@1.4.0
 
 jobs:
+  timem-install:
+    docker:
+      - image: jrmadsen/timemory:dev-cpu
+    steps:
+      - run:
+          name: apt-fixes
+          command: >
+            apt-get update &&
+            apt-get install -y git ssh
+      - checkout
+      - run:
+          name: build
+          command: >
+            cmake -B build-timemory/timem-ci-install -DTIMEMORY_REQUIRE_PACKAGES=OFF -DTIMEMORY_BUILD_TIMEM=ON -DTIMEMORY_USE_PAPI=ON -DTIMEMORY_INSTALL_ALL=OFF -DTIMEMORY_INSTALL_HEADERS=OFF -DTIMEMORY_INSTALL_CONFIG=OFF -DCMAKE_INSTALL_PREFIX=/opt/user/timemory &&
+            cmake --build build-timemory/timem-ci-install --target timem
+      - run:
+          name: install
+          command: >
+            cmake --build build-timemory/timem-ci-install --target install | tee timem-install.log
+            if [ $(cat timem-install.log | wc -l) -gt 3 ]; then echo "Error! unexpected installation"; exit 1; fi
+      - run:
+          name: test
+          command: >
+            export PATH=/opt/user/timemory/bin:${PATH}
+            cd ${HOME}
+            timem -o timem-install-test/%p -- sleep 2
+            cat timem-install-test/*
   quick-build:
     docker:
       - image: jrmadsen/timemory:dev-cpu
@@ -152,6 +179,7 @@ workflows:
   version: 2
   build:
     jobs:
+      - timem-install
       - quick-build
       - cpu-dev-build
       # - gpu-dev-build
