--- a/source/tools/timemory-avail/CMakeLists.txt
+++ b/source/tools/timemory-avail/CMakeLists.txt
@@ -17,4 +17,4 @@ set_target_properties(timemory-avail PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
 install(TARGETS timemory-avail
     DESTINATION bin
     COMPONENT tools
-    ${_OPTIONAL})
+    OPTIONAL)
