--- a/source/tools/timemory-timem/CMakeLists.txt
+++ b/source/tools/timemory-timem/CMakeLists.txt
@@ -71,7 +71,7 @@ set_target_properties(timem PROPERTIES
 install(TARGETS timem
     DESTINATION ${CMAKE_INSTALL_BINDIR}
     COMPONENT   tools
-    ${_OPTIONAL})
+    OPTIONAL)
 
 # do not build timem-mpi if not using mpi
 if(NOT TIMEMORY_USE_MPI)
@@ -103,4 +103,4 @@ endif()
 install(TARGETS timem-mpi
     DESTINATION ${CMAKE_INSTALL_BINDIR}
     COMPONENT   tools
-    ${_OPTIONAL})
+    OPTIONAL)
