Fix to timemory-run extra install

--- a/source/tools/timemory-run/CMakeLists.txt
+++ b/source/tools/timemory-run/CMakeLists.txt
@@ -78,15 +78,28 @@ if(TIMEMORY_USE_DYNINST)
         DESTINATION bin
         OPTIONAL)
 
-    configure_file(${CMAKE_CURRENT_LIST_DIR}/generated/timemory-instr.sh
-        ${PROJECT_BINARY_DIR}/timemory-instr COPYONLY)
+    add_custom_target(timemory-run-extra
+        ${CMAKE_COMMAND}
+            -D INPUT_LIST_DIR=${CMAKE_CURRENT_LIST_DIR}
+            -D EXE_BINARY_DIR=${PROJECT_BINARY_DIR}
+            -D FILE_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}/collections
+            -P ${CMAKE_CURRENT_LIST_DIR}/Generate.cmake
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Generating timemory-inst and collection files for install...")
 
+    add_dependencies(timemory-run timemory-run-extra)
+
+    file(GLOB COLLECTION_FILES "${CMAKE_CURRENT_LIST_DIR}/collections/*")
+    # the configured collection files
+    string(REPLACE "${CMAKE_CURRENT_LIST_DIR}" "${CMAKE_CURRENT_BINARY_DIR}"
+        COLLECTION_FILES "${COLLECTION_FILES}")
+
+    # these will only be installed if timemory-run is built
     install(
         PROGRAMS    ${PROJECT_BINARY_DIR}/timemory-instr
         DESTINATION ${CMAKE_INSTALL_BINDIR}
         OPTIONAL)
 
-    file(GLOB COLLECTION_FILES "${CMAKE_CURRENT_LIST_DIR}/collections/*")
     foreach(_FILE ${COLLECTION_FILES})
         install(FILES ${_FILE}
             DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/timemory/collections
