--- a/.travis.yml
+++ b/.travis.yml
@@ -31,22 +31,6 @@ jobs:
     #   Python 3.6 / Python 3.7 / Linux
     #
     # ------------------------------------------------------------------------ #
-    # Clang 6.0
-    - os: linux
-      dist: xenial
-      python: "3.7"
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-6.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-6.0
-            - build-essential
-      env:
-        - CC=clang-6.0
-        - CXX=clang++-6.0
-        - BUILD_ARGS='--minimal --build-libs shared static --stats --tools kokkos-config timem --cxx-standard=14'
     # Clang 7
     - os: linux
       dist: bionic
@@ -65,6 +49,22 @@ jobs:
         - CC=clang-7
         - CXX=clang++-7
         - BUILD_ARGS='--minimal --build-libs shared static --python --mpi --gotcha --stats --tools mallocp mpip ompt --cxx-standard=17'
+    # Clang 8.0
+    - os: linux
+      dist: bionic
+      python: "3.7"
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-bionic-8
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-8
+            - build-essential
+      env:
+        - CC=clang-8
+        - CXX=clang++-8
+        - BUILD_ARGS='--minimal --build-libs shared static --stats --tools kokkos-config timem --cxx-standard=14'
     # GCC 6
     - os: linux
       dist: xenial
