--- a/source/tools/timemory-run/CMakeLists.txt
+++ b/source/tools/timemory-run/CMakeLists.txt
@@ -5,7 +5,6 @@ endif()
 
 if(NOT TIMEMORY_BUILD_TOOLS AND NOT TIMEMORY_BUILD_DYNINST_TOOLS)
   set(_EXCLUDE EXCLUDE_FROM_ALL)
-  set(_OPTIONAL OPTIONAL)
 endif()
 
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
@@ -74,23 +73,36 @@ if(TIMEMORY_USE_DYNINST)
 
     set_target_properties(timemory-run PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
 
-    install(TARGETS timemory-run DESTINATION bin ${_OPTIONAL})
+    install(
+        TARGETS     timemory-run
+        DESTINATION bin
+        OPTIONAL)
 
-    configure_file(${CMAKE_CURRENT_LIST_DIR}/generated/timemory-instr.sh
-        ${PROJECT_BINARY_DIR}/timemory-instr COPYONLY)
+    add_custom_target(timemory-run-extra
+        ${CMAKE_COMMAND}
+            -D INPUT_LIST_DIR=${CMAKE_CURRENT_LIST_DIR}
+            -D EXE_BINARY_DIR=${PROJECT_BINARY_DIR}
+            -D FILE_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}/collections
+            -P ${CMAKE_CURRENT_LIST_DIR}/Generate.cmake
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Generating timemory-inst and collection files for install...")
 
-    install(FILES ${PROJECT_BINARY_DIR}/timemory-instr
-        DESTINATION ${CMAKE_INSTALL_BINDIR}
-        PERMISSIONS
-        OWNER_EXECUTE OWNER_READ OWNER_WRITE
-        GROUP_EXECUTE GROUP_READ
-        WORLD_EXECUTE WORLD_READ
-        ${_OPTIONAL})
+    add_dependencies(timemory-run timemory-run-extra)
 
     file(GLOB COLLECTION_FILES "${CMAKE_CURRENT_LIST_DIR}/collections/*")
+    # the configured collection files
+    string(REPLACE "${CMAKE_CURRENT_LIST_DIR}" "${CMAKE_CURRENT_BINARY_DIR}"
+        COLLECTION_FILES "${COLLECTION_FILES}")
+
+    # these will only be installed if timemory-run is built
+    install(
+        PROGRAMS    ${PROJECT_BINARY_DIR}/timemory-instr
+        DESTINATION ${CMAKE_INSTALL_BINDIR}
+        OPTIONAL)
+
     foreach(_FILE ${COLLECTION_FILES})
         install(FILES ${_FILE}
             DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/timemory/collections
-            ${_OPTIONAL})
+            OPTIONAL)
     endforeach()
 endif()
